# indy-vdr

./: .dockerignore  .gitignore  COMPLIANCE.yaml  Cargo.toml  Cross.toml  Dockerfile  README.md  README_LOCAL.md  aliases.js  build-universal.sh  build-xcframework.sh  build.rs  build.sh  index.html  local_test.sh  search-index.js  settings.html  source-files.js
.github/: dependabot.yml
.github/workflows/: build-android.yml  build-ios.yml  build.yml  rusttest.yml
ci/: did-indy-pool.dockerfile  indy-pool.dockerfile  test.sh
docker/: Dockerfile.coverage  Dockerfile.test-python  aarch64-linux-android.Dockerfile  armv7-linux-androideabi.Dockerfile  coverage.sh  i686-linux-android.Dockerfile  rustc-add-coverage.sh  test-python.sh  test.sh  x86_64-linux-android.Dockerfile
implementors/lazy_static/: trait.LazyStatic.js
indy-vdr/: Cargo.toml
indy-vdr-proxy/: Cargo.toml
indy-vdr-proxy-client/: Cargo.toml
indy-vdr-proxy-client/src/: error.rs  lib.rs
indy-vdr-proxy/src/: app.rs  handlers.rs  main.rs  utils.rs
indy-vdr/src/: lib.rs
indy-vdr/src/common/: did.rs  error.rs  verkey.rs
indy-vdr/src/common/merkle_tree/: merkletree.rs  tree.rs
indy-vdr/src/config/: mod.rs  pool_factory.rs  types.rs
indy-vdr/src/domain/: did.rs  mod.rs  pool.rs  verkey.rs
indy-vdr/src/domain/ledger/: constants.rs  ddo.rs  node.rs
indy-vdr/src/ledger/: mod.rs
indy-vdr/src/ledger/domain/: attrib.rs  author_agreement.rs  cred_def.rs  ddo.rs  mod.rs  node.rs  nym.rs  request.rs  schema.rs  txn.rs
indy-vdr/src/pool/: genesis.rs  mod.rs  types.rs
indy-vdr/src/pool/handlers/: catchup.rs  consensus.rs  full.rs  mod.rs  single.rs  status.rs
indy-vdr/src/pool/networker/: mod.rs  zmq.rs
indy-vdr/src/pool/requests/: base.rs  mod.rs
indy-vdr/src/pool/state_proof/: mod.rs
indy-vdr/src/services/: mod.rs
indy-vdr/src/services/pool/: mod.rs  pool.rs  types.rs
indy-vdr/src/services/pool/handlers/: full.rs  mod.rs  status.rs
indy-vdr/src/services/pool/networker/: mod.rs
indy-vdr/src/services/pool/requests/: catchup.rs  consensus.rs  mod.rs  request.rs  status.rs
indy-vdr/src/state_proof/: constants.rs  mod.rs  node.rs  types.rs
indy-vdr/src/utils/: base58.rs  crypto.rs  environment.rs  hash.rs  macros.rs  mod.rs  signature.rs  test.rs  validation.rs
indy-vdr/src/utils/merkletree/: tree.rs
indy_vdr/: all.html  index.html  sidebar-items.js
indy_vdr/common/: index.html  sidebar-items.js
indy_vdr/config/: index.html  sidebar-items.js  static.LIB_VERSION.html  struct.PoolConfig.html
indy_vdr/ledger/: index.html  sidebar-items.js  struct.PreparedRequest.html  struct.RequestBuilder.html
indy_vdr/pool/: enum.LedgerType.html  enum.ProtocolVersion.html  enum.RequestResult.html  enum.RequestTarget.html  (+19 more)
libindy_vdr/: Cargo.toml
libindy_vdr/include/: README.md  cbindgen.toml  libindy_vdr.h
libindy_vdr/src/: lib.rs
libindy_vdr/src/common/: did.rs  error.rs  handle.rs  mod.rs  verkey.rs
libindy_vdr/src/common/merkle_tree/: merkletree.rs  mod.rs  proof.rs  tree.rs
libindy_vdr/src/config/: constants.rs  mod.rs  pool_factory.rs  types.rs
libindy_vdr/src/ffi/: error.rs  ledger.rs  macros.rs  mod.rs  pool.rs  requests.rs  resolver.rs  vdr.rs
libindy_vdr/src/ledger/: constants.rs  mod.rs  prepared_request.rs  request_builder.rs  responses.rs
libindy_vdr/src/ledger/domain/: auth_rule.rs  cred_def.rs  ddo.rs  node.rs  pool.rs  schema.rs  validator_info.rs
libindy_vdr/src/ledger/identifiers/: cred_def.rs  mod.rs  rev_reg.rs  rich_schema.rs  schema.rs
libindy_vdr/src/ledger/requests/: attrib.rs  auth_rule.rs  author_agreement.rs  cred_def.rs  ddo.rs  flag.rs  ledgers_freeze.rs  mod.rs  node.rs  nym.rs  pool.rs  rev_reg.rs  rev_reg_def.rs  rich_schema.rs  schema.rs  txn.rs  validator_info.rs
libindy_vdr/src/pool/: builder.rs  cache.rs  factory.rs  genesis.rs  helpers.rs  manager.rs  mod.rs  pool.rs  runner.rs  types.rs
libindy_vdr/src/pool/cache/: fscache.rs  helpers.rs  memcache.rs  mod.rs  storage.rs  strategy.rs
libindy_vdr/src/pool/handlers/: catchup.rs  consensus.rs  full.rs  mod.rs  single.rs  status.rs
libindy_vdr/src/pool/networker/: mod.rs  zmq.rs
libindy_vdr/src/pool/requests/: base.rs  mod.rs  prepared_request.rs
libindy_vdr/src/resolver/: did.rs  did_document.rs  mod.rs  pool.rs  resolver.rs  types.rs  utils.rs
libindy_vdr/src/state_proof/: constants.rs  mod.rs  node.rs  types.rs
libindy_vdr/src/tests/: attrib.rs  full_request.rs  mod.rs  nym.rs  rich_schema.rs
libindy_vdr/src/tests/utils/: constants.rs  crypto.rs  helpers.rs  mod.rs  pool.rs
libindy_vdr/src/utils/: base58.rs  base64.rs  crypto.rs  environment.rs  hash.rs  macros.rs  mod.rs  qualifier.rs  signature.rs  test.rs  txn_signature.rs  validation.rs
libindy_vdr/src/vdr/: mod.rs  utils.rs  vdr.rs
libindy_vdr/tests/: acceptance_mechanism.rs  attrib.rs  auth_rule.rs  author_agreement.rs  cred_def.rs  endorse_transaction.rs  flag.rs  freeze_ledger.rs  full_request.rs  genesis.rs  get_txn.rs  node.rs  nym.rs  pool_config.rs  pool_restart.rs  pool_upgrade.rs  resolver.rs  revoc_reg.rs  rich_schema.rs  schema.rs  validator_info.rs
libindy_vdr/tests/utils/: constants.rs  crypto.rs  fixtures.rs  helpers.rs  mod.rs  pool.rs
src/: client.rs  lib.rs  main.rs
vdr-shared/: Cargo.toml
vdr-shared/src/: lib.rs  macros.rs  qualifier.rs  test.rs  validation.rs
wrappers/javascript/indy-vdr-react-native/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
wrappers/javascript/indy-vdr-react-native/android/src/main/: AndroidManifest.xml
wrappers/javascript/indy-vdr-react-native/android/src/main/java/org/hyperledger/indyvdr/: IndyVdrModule.java
wrappers/javascript/react-native/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
wrappers/javascript/react-native/android/src/main/: AndroidManifest.xml
wrappers/javascript/react-native/android/src/main/java/com/reactnativeindyvdrreactnative/: IndyVdrReactNativeModule.java  IndyVdrReactNativePackage.java
wrappers/javascript/react-native/android/src/main/java/org/hyperledger/indyvdr/: IndyVdrModule.java  IndyVdrPackage.java
(+792 files in other folders)
