[package]
name = "indy-vdr-proxy-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.17", default-features = false, features = ["json"] }
indy-vdr = { path = "../libindy_vdr" }
serde_json = "1.0.96"
url = "2.3.1"
