[package]
name = "indy-vdr-proxy"
version = "0.2.0"
authors = ["Hyperledger Indy Contributors <hyperledger-indy@lists.hyperledger.org>"]
description = "A basic proxy server exposing indy-vdr functionality over an HTTP interface"
edition = "2021"
license = "Apache-2.0"

[features]
fetch = ["hyper-tls", "hyper/client"]
zmq_vendored = ["indy-vdr/zmq_vendored"]
default = ["fetch", "zmq_vendored"]

[dependencies]
clap = "3.1"
env_logger = "0.9"
futures-util = "0.3"
indy-vdr = { version = "0.4", path = "../libindy_vdr", default-features = false, features = ["log", "git"] }
hyper = { version = "0.14", features = ["http1", "http2", "server"] }
hyper-tls = { version = "0.5", optional = true }
log = "0.4.8"
percent-encoding = "2"
regex = "1.5.4"
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
url = "2.2.2"

[target.'cfg(unix)'.dependencies]
hyper-unix-connector = "0.2"

[[bin]]
name = "indy-vdr-proxy"
path = "src/main.rs"
# NOTE suggest building release with feature "log/max_level_debug"
