[package]
name = "indy-vdr-proxy"
version = "0.1.4"
authors = [
    "Hyperledger Indy Contributors <hyperledger-indy@lists.hyperledger.org>",
]
description = "A basic proxy server exposing indy-vdr functionality over an HTTP interface"
edition = "2021"
rust-version = "1.63"
license = "Apache-2.0"

[features]
fetch = ["hyper-tls", "hyper/client"]
zmq_vendored = ["indy-vdr/zmq_vendored"]
tls = ["rustls-pemfile", "tokio-rustls", "hyper/stream"]
default = ["fetch", "zmq_vendored"]

[dependencies]
clap = "~4.2"
env_logger = "0.10"
futures-executor = "0.3"
futures-util = "0.3"
indy-vdr = { path = "../libindy_vdr", default-features = false, features = [
    "log",
] }
git2 = "0.18"
hyper = { version = "0.14", features = ["http1", "http2", "server"] }
hyper-tls = { version = "0.5", optional = true }
log = "0.4.8"
percent-encoding = "2"
regex = "1.5.4"
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
url = "2.2.2"
rustls-pemfile = { version = "1.0.3", optional = true }
tokio-rustls = { version = "0.24.1", optional = true }

[target.'cfg(unix)'.dependencies]
hyper-unix-connector = "0.2"

[[bin]]
name = "indy-vdr-proxy"
path = "src/main.rs"
