[package]
name = "indy-vdr"
version = "0.1.0"
authors = ["Hyperledger Indy Contributors <hyperledger-indy@lists.hyperledger.org>"]
edition = "2018"

description = "This is the official SDK for Hyperledger Indy (https://www.hyperledger.org/projects), which provides a distributed-ledger-based foundation for self-sovereign identity (https://sovrin.org). The major artifact of the SDK is a c-callable library."
license = "MIT/Apache-2.0"
build = "build.rs"

[lib]
name = "indy_vdr"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib", "cdylib"]

[features]
vendored_zmq = ['zmq/vendored']
default = ["vendored_zmq"]

[dependencies]
base64 = "0.10.1"
bs58 = "0.3.0"
etcommon-rlp = "0.2.4"
futures = "0.3.1"
hex = "0.4.0"
lazy_static = "1.3.0"
log = "0.4.10"
log-derive = "0.3.0"
named_type = "0.2.1"
named_type_derive = "0.2.1"
pin-utils = "0.1.0-alpha.4"
rand = "0.6.0"
regex = "1.2.1"
rmp-serde = "0.13.7"
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"
sha2 = { version = "0.8", default-features = false }
sha3 = "0.8"
thiserror = "1.0.9"
time = "0.1.42"
zmq = "0.9.2"

# temp. ursa override
ed25519-dalek = "=1.0.0-pre.2"
# used to derive vk from pk, should match ursa dependency
curve25519-dalek = "1.2.3"

[dependencies.ursa]
version = "0.3.0"
default-features = false
features = ["portable"]
