[package]
name = "indy-vdr"
version = "0.4.0-dev.4"
authors = ["Hyperledger Indy Contributors <hyperledger-indy@lists.hyperledger.org>"]
description = "A library for interacting with Hyperledger Indy Node, a distributed ledger for self-sovereign identity (https://www.hyperledger.org/use/hyperledger-indy)."
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/hyperledger/indy-vdr/"
categories = ["authentication", "cryptography"]
keywords = ["hyperledger", "indy", "ssi", "verifiable", "credentials"]

[lib]
name = "indy_vdr"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib", "cdylib"]

[features]
ffi = ["ffi-support", "logger"]
logger = ["env_logger", "log"]
zmq_vendored = ["zmq/vendored"]
local_nodes_pool = []
rich_schema = ["indy-data-types/rich_schema"]
default = ["ffi", "log", "zmq_vendored"]

[dependencies]
# This is added so we can lock the version that zmq uses
# 0.1.49 is broken for ios targets
cmake = { version = "=0.1.48", optional = true }
env_logger = { version = "0.10", optional = true }
etcommon-rlp = "0.2.4"
ffi-support = { version = "0.4", optional = true }
futures-channel = "0.3"
futures-executor = "0.3"
futures-util = "0.3"
hex = "0.4"
hex-literal = "0.3.4"
indy-data-types = "0.5"
indy-utils = { version = "0.5", default-features = false, features = ["base64", "ed25519", "hash", "txn_signature"] }
once_cell = "1.5"
log = { version = "0.4", optional = true }
pin-utils = "0.1"
rand = "0.8"
regex = "1.3"
rmp-serde = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
thiserror = "1.0"
zmq = "0.9"

[dependencies.ursa]
version = "0.3.5"
default-features = false
features = ["bls_bn254"]

[dev-dependencies]
rstest = "0.16"
time = "0.3"
indy-data-types = { version = "0.5", default-features = false, features = ["rich_schema"] }
indy-test-utils = { version = "0.1" }
