[package]
name = "indy-vdr"
version = "0.4.3"
authors = [
    "Hyperledger Indy Contributors <hyperledger-indy@lists.hyperledger.org>",
]
description = "A library for interacting with Hyperledger Indy Node, a distributed ledger for self-sovereign identity (https://www.hyperledger.org/use/hyperledger-indy)."
edition = "2021"
rust-version = "1.63"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/hyperledger/indy-vdr/"
categories = ["authentication", "cryptography"]
keywords = ["hyperledger", "indy", "ssi", "verifiable", "credentials"]

[lib]
name = "indy_vdr"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib", "cdylib"]

[features]
ffi = ["ffi-support", "logger"]
logger = ["env_logger", "log"]
zmq_vendored = ["zmq/vendored"]
local_nodes_pool = []
rich_schema = ["indy-data-types/rich_schema"]
default = ["ffi", "log", "zmq_vendored"]

[dependencies]
# This is added so we can lock the version that zmq uses
# 0.1.49 is broken for ios targets
cmake = { version = "=0.1.48", optional = true }
base64 = "0.21"
bs58 = "0.5"
etcommon-rlp = "0.2.4"
env_logger = { version = "0.10", optional = true }
ffi-support = { version = "0.4", optional = true }
futures-channel = "0.3"
futures-executor = "0.3"
futures-util = "0.3"
hex = "0.4"
indy-blssignatures = "0.1"
indy-data-types = { version = "0.7", default-features = false, features = [
    "anoncreds",
    "ed25519",
    "merkle_tree",
] }
once_cell = "1.5"
log = { version = "0.4", optional = true }
percent-encoding = "2.2"
pin-utils = "0.1"
rand = "0.8"
regex = "1.3"
rmp-serde = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sha3 = "0.10"
thiserror = "1.0"
time = { version = "=0.3.20", features = ["parsing"] }
url = "2.2.2"
zmq = "0.9"
sled = "0.34.7"

[dev-dependencies]
rstest = "0.18"
time = "0.3"
indy-data-types = { version = "0.7", default-features = false, features = [
    "rich_schema",
] }
