[package]
name = "vdr-shared"
version = "0.1.0"
authors = ["Hyperledger Indy Contributors <hyperledger-indy@lists.hyperledger.org>"]
edition = "2018"

description = "This is the official SDK for Hyperledger Indy (https://www.hyperledger.org/projects), which provides a distributed-ledger-based foundation for self-sovereign identity (https://sovrin.org). The major artifact of the SDK is a c-callable library."
license = "MIT/Apache-2.0"

[lib]
name = "vdr_shared"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
base64 = "0.10.1"
bs58 = "0.3.0"
hex = "0.4.0"
lazy_static = "1.3.0"
regex = "1.3.1"
serde_json = "1.0.40"
tempfile = "3.1.0"

[dependencies.ursa]
version = "0.3.2"
default-features = false
features = ["sha2", "ed25519", "x25519"]
